# smart-home-rust

./: .gitignore  Cargo.toml  rpi_build.sh  rpi_cpy.sh
conf/: conf.yaml
