[package]
name = "rsh"
version = "0.1.0"
authors = ["lt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
mysql_async = "0.25"
tokio = { version = "1.0", features = ["full"] }
openssl = { version = '0.10', optional = true }


[features]
vendored-openssl = ["openssl/vendored"]